Revision history for {{$dist->name}}

{{$NEXT}}

0.17      2014-05-28 20:25:10 -0400
  - add set_path_sep method

0.16      2014-05-28 05:55:04 -0400
  - fix win32_space_be_gone on MSWin32

0.15      2014-05-27 19:44:57 -0400
  - make win32_space_be_gone a little less aggressive
    don't modify long paths (non 8.3) that don't have spaces

0.14      2014-05-27 19:22:19 -0400
  - added win32_space_be_gone function

0.12      2014-04-08 17:45:06 -0400
  - use -f option with tcsh/csh in testing
    In case you have another Perl configured in your .tcsh/.cshrc

0.11      2014-03-19 13:42:31 -0400
  - support for Perl 5.8

0.10      2014-03-18 12:27:31 -0400
  - fix for test hang on OpenBSD (GH#7)

0.09      2014-01-07 09:25:01 -0500
  - New set_alias method for defining simple aliases
  - Support for Windows PowerShell (tests on cygwin + MSWin32)
  - Support for fish shell (tech preview)

0.08      2013-05-31 06:58:49 America/New_York
  - promote to production

0.07_01   2013-05-08 08:31:22 EST5EDT
  - also test against 'bsd-csh' if found

0.07      2013-02-22 21:39:20 America/New_York
  - support for testing against cmd.exe and command.com under cygwin

0.06_03   2013-02-22 09:25:02 America/New_York
  - tone down diagnostic, display all shells found

0.06_02   2013-02-22 09:07:24 America/New_York
  - use test in place of [ for csh

0.06_01   2013-02-18 15:47:36 America/New_York
  - documentation update
  - search for [ during test

0.06      2012-11-29 11:47:51 America/New_York
  - fix for settting environment variables in traditional bourne shell

0.05      2012-11-14 12:43:28 America/New_York
  - escape [ in append and prepend magic so that csh on Solaris is happy.

0.04      2012-11-13 02:41:59 EST5EDT
  - test against 44bsd-csh, if found in PATH, non "t" csh on FreeBSD
  - fix warnings on older Perls

0.03      2012-10-28 07:44:41 EST5EDT
  - fix doco to remove bashism when referring to bourne shell.

0.02      2012-10-26 07:53:58 EST5EDT